--- a/metrocuadrado-plugin/.project
+++ b/metrocuadrado-plugin/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>base</name>
-	<comment>Project base created by Buildship.</comment>
+	<name>metrocuadrado-plugin</name>
+	<comment>Project metrocuadrado-plugin created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
