--- a/ciencuadras-plugin/.project
+++ b/ciencuadras-plugin/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>common</name>
-	<comment>Project common created by Buildship.</comment>
+	<name>ciencuadras-plugin</name>
+	<comment>Project ciencuadras-plugin created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
