--- a/ciencuadras-plugin/build.gradle
+++ b/ciencuadras-plugin/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    compile project(':common')
+    compile project(':house-finder-api')
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
 }
