--- a/house-finder-core/.project
+++ b/house-finder-core/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>app</name>
-	<comment>Project app created by Buildship.</comment>
+	<name>house-finder-core</name>
+	<comment>Project house-finder-core created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
