--- a/house-finder-core/build.gradle
+++ b/house-finder-core/build.gradle
@@ -31,10 +31,14 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web:2.4.11")
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf:2.4.11")
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.11'
-    
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
+       
    // https://mvnrepository.com/artifact/com.sun.el/el-ri
 	implementation group: 'com.sun.el', name: 'el-ri', version: '3.0.4'
     //runtimeOnly 'com.h2database:h2:1.4.200'     
+        
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:0.11.0' 
         
     //runtimeOnly 'com.h2database:h2'   
     //developmentOnly 'org.springframework.boot:spring-boot-devtools'
