--- a/house-finder-api/build.gradle
+++ b/house-finder-api/build.gradle
@@ -2,5 +2,9 @@ plugins {
     id 'java-library'
 }
 
-dependencies {
+dependencies { 
+
+// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:0.11.0' 
+
 }
