--- a/fincaraiz-plugin/build.gradle
+++ b/fincaraiz-plugin/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'java'
 }
 
-dependencies {
+dependencies { 
     compile project(':house-finder-api')
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation 'com.google.code.gson:gson:2.10.1'
+    // https://mvnrepository.com/artifact/org.springframework/spring-web
+	implementation 'org.springframework:spring-web:3.0.2.RELEASE'
+               
 }
