--- a/house-finder-api/build.gradle
+++ b/house-finder-api/build.gradle
@@ -5,6 +5,8 @@ plugins {
 dependencies { 
 
 // https://mvnrepository.com/artifact/org.projectlombok/lombok
-	compileOnly 'org.projectlombok:lombok:0.11.0' 
-
+	compileOnly 'org.projectlombok:lombok:0.11.0'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
+	 
 }
