fix: plugin fincaraiz

--- a/fincaraiz-plugin/build.gradle
+++ b/fincaraiz-plugin/build.gradle
@@ -4,8 +4,8 @@ plugins {
 
 dependencies { 
     compile project(':house-finder-api')
-
-    implementation 'org.apache.commons:commons-math3:3.6.1'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
 	implementation 'com.google.code.gson:gson:2.10.1'
     // https://mvnrepository.com/artifact/org.springframework/spring-web
