--- a/ciencuadras-plugin/build.gradle
+++ b/ciencuadras-plugin/build.gradle
@@ -3,7 +3,11 @@ plugins {
 }
 
 dependencies {
-    compile project(':house-finder-api')
-
-    implementation 'org.apache.commons:commons-math3:3.6.1'
+    compile project(':house-finder-api')    
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation 'com.google.code.gson:gson:2.10.1'
+    // https://mvnrepository.com/artifact/org.springframework/spring-web
+	implementation 'org.springframework:spring-web:3.0.2.RELEASE'
 }
